--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leon</title>
+    <title>LEON</title>
     <link rel="stylesheet" href="css/lion.css" />
     <link rel="stylesheet" href="css/normaliz.css" />
     <link rel="stylesheet" href="css/all.min.css" />
